Fixed the deck menu clapping inside the deck issue and applied scrollbar styles for body

--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -111,31 +111,28 @@ textarea {
 
 	background-color: white;
 	color: black;
-
-	overflow-y: auto;
-	overflow-x: visible;
 }
 
-.deck-item::-webkit-scrollbar {
+::-webkit-scrollbar {
 	width: 6px;
 	height: 6px;
 }
 
-.deck-item::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
 	background-color: #d4d4d4;
 	border-radius: 10px;
 }
 
-.deck-item::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
 	background-color: #ffa200;
 	border-radius: 10px;
 }
 
-.deck-item::-webkit-scrollbar-thumb:hover {
+::-webkit-scrollbar-thumb:hover {
 	background-color: #dd8c00;
 	border-radius: 10px;
 }
-
+ 
 .deck-item-header {
 	width: 100%;
 	display: flex;
@@ -205,6 +202,9 @@ textarea {
 	flex-direction: column;
 	align-items: center;
 	flex: 7;
+
+	overflow-y: auto;
+	overflow-x: visible;
 }
 
 .deck-item-footer {
